--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "{{name}}",
+  "name": "test",
   "version": "1.1.1",
   "description": "{{ description }}",
   "author": "{{ author }}",
