--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "test",
-  "version": "1.1.1",
+  "name": "name",
+  "version": "1.0.3",
   "description": "{{ description }}",
   "author": "{{ author }}",
   "scripts": {
